# simple_cpp_game

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake_modules/: CodeCoverage.cmake
include/: fighter.h  fighter.i
src/: fighter.cpp  main.cpp
test/: test_fighter.cpp
